import { Vector3 } from "three";


export class LightFrame {
  intensity: number = 1.0;
  color: string = "#ffffff";
  position: Vector3 = new Vector3();
}