@startuml name Rendering Pipeline Interaction (Controlled Mutability)

' =====================================================
' Rendering Pipeline & JSX Interaction
' Controlled Mutability – Architecture Correct
' =====================================================

skinparam classAttributeIconSize 0
skinparam ranksep 120
skinparam nodesep 80

' -----------------------------------------------------
' Scene Renderer (JSX)
' -----------------------------------------------------
class SceneRenderer <<JSX Component>> {
  + initCamera() : void
  + initLight() : void
}

' -----------------------------------------------------
' JSX Render Objects
' -----------------------------------------------------
together {
  class DroneView <<JSX Component>> {
    + props : DroneFrame
    + render() : JSX.Element
  }

  class PathView <<JSX Component>> {
    + props : PathFrame
    + render() : JSX.Element
  }
}

' -----------------------------------------------------
' State Stores (React-controlled render state)
' -----------------------------------------------------
together {
  class DroneStateStore {
    - currentState : DroneFrame
    + update(mutator : DroneFrame) : void
  }

  class PathStateStore {
    - currentState : PathFrame
    + update(mutator : PathFrame) : void
  }

  class LightStateStore {
    - currentState : LightFrame
    + update(mutator : LightFrame) : void
  }
}

' -----------------------------------------------------
' Draft Frame (Controlled Mutability)
' -----------------------------------------------------
class DraftFrame {
  + droneFrame : DroneFrame
  + pathFrame : PathFrame
  + lightFrame : LightFrame
}


' -----------------------------------------------------
' Encapsulated Frames (Immutable per commit)
' -----------------------------------------------------
together {
  class DroneFrame {
    + dronePositions : Map<number,Vector3>
    + droneColors : Map<number, string>
  }

  class PathFrame {
    + pathPositions : Map<number,Vector3>
    + pathColor : Map<number,string>
  }

  class LightFrame {
    + intensity : number
    + color : string
    + position : Vector3
  }
}

' -----------------------------------------------------
' Subsystems (Logic only, no rendering)
' -----------------------------------------------------
together {
  class TimeManager
  class SelectionManager
  class CollisionManager
}

' -----------------------------------------------------
' Subsystems modify DraftFrame (not JSX, not State)
' -----------------------------------------------------
TimeManager --> DraftFrame : apply changes >
SelectionManager --> DraftFrame : apply changes >
CollisionManager --> DraftFrame : apply changes >

' -----------------------------------------------------
' SimulationView owns pipeline & commits state
' -----------------------------------------------------
class SimulationView

SimulationView --> DraftFrame : owns >
SimulationView --> DroneStateStore : commit >
SimulationView --> PathStateStore : commit >
SimulationView --> LightStateStore : commit >

' -----------------------------------------------------
' SceneRenderer reads state and renders JSX
' -----------------------------------------------------
SceneRenderer --> DroneStateStore : reads >
SceneRenderer --> PathStateStore : reads >
SceneRenderer --> LightStateStore : reads >

SceneRenderer --> DroneView : passes props >
SceneRenderer --> PathView : passes props >

' -----------------------------------------------------
' Stores hold last committed frames
' -----------------------------------------------------
DroneStateStore --> DroneFrame : stores >
PathStateStore --> PathFrame : stores >
LightStateStore --> LightFrame : stores >

@enduml

